fix code snippet  width styling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -102,7 +102,9 @@ li {
 pre {
   padding: 1rem;
   border-radius: 0.5rem;
-  max-width: 100%;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-x: auto;
 }
 
 code {
